# CPVector

./: .gitignore  CMakeLists.txt  Doxyfile  MainPage.dox  README.md  annotated.html  classes.html  dir_000000_000002.html  dir_000002_000001.html  dir_000003_000002.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6b52be76283a2d1f959a75bffb161a5d.html  dir_6b52be76283a2d1f959a75bffb161a5d_dep.map  dir_6b52be76283a2d1f959a75bffb161a5d_dep.md5  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4_dep.map  dir_d28a4824dc47e487b107a5db32ef43c4_dep.md5  examples.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherits.html  keywords.txt  (+8 more)
.github/workflows/: AUnit_EpoxyDuino .yml  ArduinoLint.yml  ArduinoRelease.yml  ArduinoTest.yml  CMakeRelease.yml  CompileArduinoSketches.yml  CreateReleases.yml  Delete Deployment Environment.yml  DesktopTesting.yml  DoxyToGhPages.yml  Doxygen-to-GhPages.yml  cmake-multi-platform.yml  cmake-multi.platform.yml  main.yml
Builds/Linux/: CMakeLists.txt  main.cpp
Builds/XCode/: CMakeLists.txt  main.cpp
CompilationResources/EmbeddedVector_Arduino/: library.properties  readme.txt
d0/d07/: _c_p_vector___exceptions_8h.html  _c_p_vector___exceptions_8h_source.html
d0/d7c/: _sorting_data_8cpp.html
d0/d82/: class_c_p_vector_1_1_sorting_1_1_sorting_array-members.html
d1/d11/: class_c_p_vector_1_1out__of__range-members.html
d1/d56/: class_c_p_vector_1_1exception-members.html
d1/dd2/: _c_p_vector___template_8h.html  _c_p_vector___template_8h_source.html
d1/dda/: _c_p_vector_8h__dep__incl.map  _c_p_vector_8h__dep__incl.md5
d1/de9/: _c_p_vector___build_settings_8h__dep__incl.map  _c_p_vector___build_settings_8h__dep__incl.md5
d2/d05/: _operator_testing_8cc.html
d2/dad/: class_c_p_vector_1_1out__of__range.html
d2/dbc/: class_c_p_vector_1_1exception.html
d2/dc1/: _operators.html
d2/dd8/: _tutorials.html
d3/d4e/: _2examples_2_appending_data_8cpp-example.html
d4/d47/: _c_p_vector___template_8h__incl.map  _c_p_vector___template_8h__incl.md5
d4/df6/: test.html
d5/d15/: _c_p_vector___sorting_array_8h.html  _c_p_vector___sorting_array_8h_source.html
d5/d18/: _constructing.html
d5/d42/: _build_configuration_8dox.html
d5/d52/: _resizing.html
d5/d91/: _constructor_testing_8cc__incl.map  _constructor_testing_8cc__incl.md5
d5/df4/: class_c_p_vector_1_1logic__error.html
d5/df6/: class_c_p_vector_1_1logic__error-members.html
d6/d07/: _sorting_data_8cpp__incl.map  _sorting_data_8cpp__incl.md5
d6/d4a/: _exception_testing_8cc__incl.map  _exception_testing_8cc__incl.md5
d7/d00/: _tutorials_8dox.html
d7/d04/: _2examples_2_build_configuration_8cpp-example.html
d7/d80/: class_c_p_vector_1_1vector.html
d7/da6/: _2examples_2_sorting_array_8cpp-example.html
d7/dbc/: _c_p_vector___sorting_8h__incl.map  _c_p_vector___sorting_8h__incl.md5
d8/d1f/: class_c_p_vector_1_1bad__alloc.html
d8/d5d/: _basic_usage.html
d8/d90/: group___sorting.html
d8/d99/: _c_p_vector___sorting_array_8h__incl.map  _c_p_vector___sorting_array_8h__incl.md5
d8/da2/: _c_p_vector___template_8h__dep__incl.map  _c_p_vector___template_8h__dep__incl.md5
d8/db4/: _c_p_vector___exceptions_8h__dep__incl.map  _c_p_vector___exceptions_8h__dep__incl.md5
d8/de6/: _c_p_vector___sorting_8h__dep__incl.map  _c_p_vector___sorting_8h__dep__incl.md5
d9/d11/: _c_p_vector___exceptions_8h__incl.map  _c_p_vector___exceptions_8h__incl.md5
d9/d3a/: _appending_data_8dox.html
d9/d5c/: _dynamic_allocation_testing_8cc__incl.map  _dynamic_allocation_testing_8cc__incl.md5
d9/d7e/: class_c_p_vector_1_1bad__alloc-members.html
d9/d87/: _building__c_make.html
d9/d8d/: _instalation.html
d9/d9b/: _sorting_testing_8cc__incl.map  _sorting_testing_8cc__incl.md5
d9/db7/: class_c_p_vector_1_1vector-members.html
d9/dd6/: _r_e_a_d_m_e_8md.html
d9/de0/: _c_p_vector___move_8h__incl.map  _c_p_vector___move_8h__incl.md5
da/d06/: _c_p_vector_8h__incl.map  _c_p_vector_8h__incl.md5
da/d36/: _c_p_vector_8h.html  _c_p_vector_8h_source.html
da/d4b/: _constructor_testing_8cc.html
da/d5c/: _build_configuration_8cpp__incl.map  _build_configuration_8cpp__incl.md5
da/d65/: _appending_data_8cpp__incl.map  _appending_data_8cpp__incl.md5
da/db5/: _exception_testing_8cc.html
db/d29/: _build_configuration_8cpp.html
db/d4c/: _c_p_vector___move_8h__dep__incl.map  (+2 more)
dox/: Examples.dox  Installation.dox  MainPage.dox  Tutrorial.dox
examples/: CMakeLists.txt
resources/: DoxygenLayout.xml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_8.js  files_9.js  (+39 more)
src/: CMakeLists.txt  CPVector.h  CPVector_BuildSettings.h  CPVector_Exceptions.h  CPVector_Move.h  CPVector_Template.h  CPVector_UserSetup.h  EmbeddedVector.h  EmbeddedVector_Template.h
src/Sorting/: CMakeLists.txt  CPVector_Sorting.h  CPVector_SortingArray.h  CPVector_SortingDefinitions.h  CPVector_SortingTemplates.h
tests/: BasicFunctionalityTesting.cc  CMakeLists.txt  ConstructorTesting.cc  DynamicAllocationTesting.cc  ExceptionTesting.cc  OperatorTesting.cc
tests/BasicFunctionality/: BasicFunctionalityTestiing.cc  BasicFunctionalityTesting.cc  CMakeLists.txt  ConstructorTesting.cc  DynamicAllocationTesting.cc  OperatorTesting.cc  tester.cc
(+104 files in other folders)
